<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lineSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/selectTitle"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/lblCourse"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/colorLabel"
                android:text="@string/courseName"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spCourse"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/lblGrade"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/colorLabel"
                android:text="@string/gradeName"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spGrade"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/lblSemester"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/colorLabel"
                android:text="@string/semesterName"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spSemester"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lineImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lineSelect"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvProblem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="@color/colorPrimary"
            android:text="@string/problem"
            android:textAlignment="center"
            android:textSize="20sp" />

        <com.raisin.topicset.component.CropImageView
            android:id="@+id/ivProblem"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:layout_marginStart="0dp"
            android:contentDescription="@string/problem"
            android:src="@drawable/camera" />

        <TextView
            android:id="@+id/tvAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:background="@color/colorPrimary"
            android:text="@string/answer"
            android:textAlignment="center"
            android:textSize="20sp" />

        <com.raisin.topicset.component.CropImageView
            android:id="@+id/ivAnswer"
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/answer"
            android:src="@drawable/camera" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginBottom="0dp"
            android:text="@string/done" />
    </LinearLayout>

</RelativeLayout >