<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zhu.frank.wrongtopicset.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="3dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/subject1"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="6dp"
                android:text="@string/chinese"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="6dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/subject2"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="6dp"
                android:text="@string/mathmatic"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="3dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/subject3"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/english"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="6dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/subject4"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/physics"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="3dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/subject5"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/chemistry"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="6dp"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/addSubject"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/append"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>